test fix for no space left

--- a/.github/workflows/git-ci.yml
+++ b/.github/workflows/git-ci.yml
@@ -39,4 +39,4 @@ jobs:
  
       - name: Scan Trivy
         run: |
-          trivy image --severity HIGH,CRITICAL fastapi-app
+          trivy image --exit-code 1 --severity HIGH,CRITICAL fastapi-app
