--- a/.github/workflows/git-ci.yml
+++ b/.github/workflows/git-ci.yml
@@ -38,7 +38,7 @@ jobs:
           
       - name: Scan Trivy
         run: |
-          trivy image --exit-code 0 --severity HIGH,CRITICAL fastapi-app
+          trivy image --severity HIGH,CRITICAL fastapi-app
           continue-on-error: true
 
       - name: Push Docker Image
